[gd_scene load_steps=62 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_6.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_17.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_19.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_18.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_14.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_16.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_15.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_12.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_13.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_11.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_7.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_9.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_10.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_0.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_19.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_17.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_16.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_13.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_15.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_12.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_9.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_10.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_8.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_18.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_7.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_6.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_5.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_14.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_3.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_1.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_11.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_2.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/move/survivor-move_handgun_4.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_0.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_9.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_8.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_4.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_1.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_3.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_2.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_5.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_6.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_7.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_14.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_13.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_12.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_11.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/meleeattack/survivor-meleeattack_handgun_10.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/shoot/survivor-shoot_handgun_0.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/shoot/survivor-shoot_handgun_1.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Top_Down_Survivor/handgun/shoot/survivor-shoot_handgun_2.png" type="Texture" id=59]
[ext_resource path="res://Sounds/380_gunshot_single-mike-koenig.wav" type="AudioStream" id=60]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ) ],
"loop": false,
"name": "melee",
"speed": 10.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ) ],
"loop": false,
"name": "shoot_handgun",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 7.3218e-008, -0.296296 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -20.3163, -64.4901, -0.760733, -53.8235, 7.68371, -45.379, 37.017, -40.4901, 70.3504, -18.7124, 73.4615, 39.5099, 77.9059, 44.8432, 70.7948, 66.1765, 46.7948, 67.0654, 1.46149, 82.621, -32.7607, 85.2876, -77.2052, 58.1765, -73.6496, 20.8432, -90.0941, -3.1568, -88.3163, -25.8235, -73.6496, -46.7124, -42.983, -67.1568 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot_handgun"

[node name="Gun" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="GunMuzzle" type="Position2D" parent="Gun"]
position = Vector2( 121.289, 54.8148 )

[node name="GunDirection" type="Position2D" parent="Gun"]
position = Vector2( 900, 54.8148 )

[node name="HandGunShot" type="AudioStreamPlayer" parent="Gun"]
stream = ExtResource( 60 )
volume_db = -2.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
